--- a/layout.css
+++ b/layout.css
@@ -7,10 +7,38 @@ body {
 	color:#181a1c;
 	}
 h1 {
-	font-family: 'Bangers', cursive;
 	margin:0px 0px 30px 0px;
 	padding:0px;
 	font-size:62px;
 	line-height:80px;
 	color:#181a1c;
+	text-decoration: center;
 }
+
+#main_content { 
+	max-width:800px;
+	margin:40px auto;
+}
+
+input {
+	background:rgba(255,255,255,0.3);
+	border:1px solid #fff;
+	padding:0px 20px;
+	color:#2a4a5f;	
+	margin:0px 10px 0px 10px;
+	display:inline-block;
+	width:calc(100% - 548px);
+	height:52px;
+	border-radius:0px;
+	vertical-align:middle;
+	font-size:16px;
+	font-family: 'Lato', sans-serif;
+}
+input::-webkit-input-placeholder { color:#2a4a5f; font-style:italic; }
+input::-moz-placeholder { color:#2a4a5f; font-style:italic; }
+input:-moz-placeholder { color:#2a4a5f; font-style:italic; }
+input:-ms-input-placeholder { color:#2a4a5f; font-style:italic; }
+
+
+
+
