--- a/layout.css
+++ b/layout.css
@@ -7,10 +7,62 @@ body {
 	color:#181a1c;
 	}
 h1 {
-	font-family: 'Bangers', cursive;
 	margin:0px 0px 30px 0px;
 	padding:0px;
 	font-size:62px;
 	line-height:80px;
 	color:#181a1c;
+	text-decoration: center;
 }
+
+#main_content { 
+	max-width:800px;
+	margin:40px auto;
+}
+
+input {
+	background-color:#f8fafb;
+	border:1px solid #cae3f5;
+	border-radius:0px;
+	font-size:14px; line-height:22px;
+	color:#2a4a5f;
+	font-family: 'Lato', sans-serif;
+}
+input::-webkit-input-placeholder { color:#2a4a5f; font-style:italic; }
+input::-moz-placeholder { color:#2a4a5f; font-style:italic; }
+input:-moz-placeholder { color:#2a4a5f; font-style:italic; }
+input:-ms-input-placeholder { color:#2a4a5f; font-style:italic; }
+.yellow_button, {
+	color:#2a4a5f;
+	font-weight:900;
+	text-transform:uppercase;
+	padding:12px 20px;
+	text-align:center;
+	font-size:16px;
+	line-height:30px;
+	margin-bottom:10px;
+	background-color:#ffdf4f;	
+	cursor:pointer;
+	display:inline-block;
+}
+
+.yellow_button:hover { background-color:#fcdf5e; }
+.blue_button {
+	color:#fff;
+	font-weight:900;
+	text-transform:uppercase;
+	padding:12px 20px;
+	text-align:center;
+	font-size:16px;
+	line-height:30px;
+	margin-bottom:10px;
+	background-color:#0e76bd;
+	cursor:pointer;
+	display:inline-block;
+	text-decoration:none;
+}
+.blue_button:hover { background-color:#177cc1; }
+
+
+
+
