--- a/layout.css
+++ b/layout.css
@@ -13,11 +13,14 @@ h1 {
 	line-height:80px;
 	color:#181a1c;
 	text-decoration: center;
+	font-style:italic;
+	font-weight: 900;
 }
 
 #main_content { 
 	max-width:800px;
 	margin:40px auto;
+	text-decoration: center;
 }
 
 input {
@@ -27,12 +30,16 @@ input {
 	font-size:14px; line-height:22px;
 	color:#2a4a5f;
 	font-family: 'Lato', sans-serif;
+	padding:10px;
+	width:200px;
+	margin-bottom:30px;
+
 }
 input::-webkit-input-placeholder { color:#2a4a5f; font-style:italic; }
 input::-moz-placeholder { color:#2a4a5f; font-style:italic; }
 input:-moz-placeholder { color:#2a4a5f; font-style:italic; }
 input:-ms-input-placeholder { color:#2a4a5f; font-style:italic; }
-.yellow_button, {
+.yellow_button {
 	color:#2a4a5f;
 	font-weight:900;
 	text-transform:uppercase;
@@ -59,9 +66,13 @@ input:-ms-input-placeholder { color:#2a4a5f; font-style:italic; }
 	background-color:#0e76bd;
 	cursor:pointer;
 	display:inline-block;
-	text-decoration:none;
 }
 .blue_button:hover { background-color:#177cc1; }
+button { border:none; font:16px/26px 'Lato', sans-serif; }
+#buttons_container { margin-top:30px; }
+#status { font-weight: 900; color:#2a4a5f; }
+#status span { font-size:40px; line-height: 54px; }
+
 
 
 
