--- a/layout.css
+++ b/layout.css
@@ -7,7 +7,7 @@ body {
 	color:#181a1c;
 	}
 h1 {
-	margin:0px 0px 30px 0px;
+	margin:0px 0px 50px 0px;
 	padding:0px;
 	font-size:62px;
 	line-height:80px;
@@ -19,8 +19,8 @@ h1 {
 
 #main_content { 
 	max-width:800px;
-	margin:40px auto;
-	text-decoration: center;
+	margin:480px auto 0px;
+	text-align: center;
 }
 
 input {
@@ -30,7 +30,7 @@ input {
 	font-size:14px; line-height:22px;
 	color:#2a4a5f;
 	font-family: 'Lato', sans-serif;
-	padding:10px;
+	padding:16px 10px 14px 10px;
 	width:200px;
 	margin-bottom:30px;
 
@@ -69,7 +69,7 @@ input:-ms-input-placeholder { color:#2a4a5f; font-style:italic; }
 }
 .blue_button:hover { background-color:#177cc1; }
 button { border:none; font:16px/26px 'Lato', sans-serif; }
-#buttons_container { margin-top:30px; }
+#buttons_container { margin-top:30px; margin-bottom:20px; }
 #status { font-weight: 900; color:#2a4a5f; }
 #status span { font-size:40px; line-height: 54px; }
 
