--- a/layout.css
+++ b/layout.css
@@ -70,8 +70,8 @@ input:-ms-input-placeholder { color:#2a4a5f; font-style:italic; }
 .blue_button:hover { background-color:#177cc1; }
 button { border:none; font:16px/26px 'Lato', sans-serif; }
 #buttons_container { margin-top:30px; margin-bottom:20px; }
-#num_guesses { font-weight: 900; color:#2a4a5f; }
-#num_guesses span { font-size:40px; line-height: 54px; }
+#status { font-weight: 900; color:#2a4a5f; }
+#status span { font-size:40px; line-height: 54px; }
 
 
 
