--- a/layout.css
+++ b/layout.css
@@ -72,6 +72,8 @@ button { border:none; font:16px/26px 'Lato', sans-serif; }
 #buttons_container { margin-top:30px; margin-bottom:20px; }
 #num_guesses { font-weight: 900; color:#2a4a5f; }
 #num_guesses span { font-size:40px; line-height: 54px; }
+iframe #content { width:100%; height:100%; text-align: center; }
+iframe #chrome { display: none; }
 
 
 
