--- a/layout.css
+++ b/layout.css
@@ -70,10 +70,11 @@ input:-ms-input-placeholder { color:#2a4a5f; font-style:italic; }
 .blue_button:hover { background-color:#177cc1; }
 button { border:none; font:16px/26px 'Lato', sans-serif; }
 #buttons_container { margin-top:30px; margin-bottom:20px; }
-#num_guesses { font-weight: 900; color:#2a4a5f; }
+#num_guesses { font-weight: 900; color:#2a4a5f; margin-bottom:15px; }
 #num_guesses span { font-size:40px; line-height: 54px; }
-iframe #content { width:100%; height:100%; text-align: center; }
+iframe #content { width:100% !important; height:100% !important; text-align: center; }
 iframe #chrome { display: none; }
+#status { font-size:17px; margin-bottom:30px; }
 
 
 
