--- a/layout.css
+++ b/layout.css
@@ -19,7 +19,7 @@ h1 {
 
 #main_content { 
 	max-width:800px;
-	margin:80px auto 0px;
+	margin:20px auto 0px;
 	text-align: center;
 }
 
@@ -69,7 +69,7 @@ input:-ms-input-placeholder { color:#2a4a5f; font-style:italic; }
 }
 .blue_button:hover { background-color:#177cc1; }
 button { border:none; font:16px/26px 'Lato', sans-serif; }
-#buttons_container { margin-top:30px; margin-bottom:20px; }
+#buttons_container { margin:10px 0px; }
 #num_guesses { font-weight: 900; color:#2a4a5f; margin-bottom:15px; }
 #num_guesses span { font-size:40px; line-height: 54px; }
 #status { font-size:17px; margin-bottom:30px; }
